modules/03-network-resiliency/timeouts-retries-circuitbreaking/retries/productcatalog-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalog
  namespace: workshop
spec:
  hosts:
  - productcatalog
  http:
  - match:
    - uri:
        prefix: /
    retries:
      attempts: 2
    route:
    - destination:
        host: productcatalog
        port:
          number: 5000
